syntax = "proto3";
package chat;

message VtubersData {
  bytes Data = 1;
}

message ServiceMessage {
    string Message = 1;
    string Service = 2;
}
    
service ChatService {
  rpc ReqData(ServiceMessage) returns (VtubersData) {}
}