syntax = "proto3";
package pilot;
option go_package = "github.com/justhumanz/service/pilot";

message ServiceInit {
  bytes ConfigFile = 1;
}

message AgencyPayload {
  bytes AgencyVtubers = 1;
}

message ServiceMessage {
    string Message = 1;
    string Service = 2;
    string ServiceUUID = 3;
}


message Metric {
  bytes MetricData = 1;
  string State = 2;
}

message Empty {

}

message RunJob {
  string Message = 1;
  string Service = 2;
  bool Run = 3;
  bytes VtuberPayload = 4;
}
    
service PilotService {
  //Get config file from pilot
  rpc GetBotPayload(ServiceMessage) returns (ServiceInit) {}

  //Get and check approval from pilot (scaling scrapping only)
  rpc RequestRunJobsOfService(ServiceMessage) returns (RunJob){}

  //Get agency payload for non scaling service only
  rpc GetAgencyPayload(ServiceMessage) returns (AgencyPayload){}
  
  rpc HeartBeat(ServiceMessage) returns (stream Empty){}
  rpc MetricReport(Metric) returns (Empty){}
  rpc ReportError(ServiceMessage) returns (Empty){}
}